# remedicall

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .env  Dockerfile  app.db  auth.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/app/config/: config.py  env.py
backend/app/config/database/: db.py
backend/app/core/: app.py
backend/app/core/auth/models/: model_token.py
backend/app/core/auth/routes/: auth_route.py
backend/app/core/auth/services/: middleware_auth.py  service_auth.py  service_token.py
backend/app/core/auth/types/: type_auth.py
backend/app/core/medication/model/: medication_interaction_model.py  medication_log_model.py  medication_model.py  medication_reminder_model.py  medication_schedule_model.py  refill_reminder_model.py
backend/app/core/medication/types/: types_medication.py
backend/app/core/notification/models/: model_notification.py
backend/app/core/notification/service/: notification_services.py
backend/app/core/user/model/: user_model.py
backend/app/core/user/routes/: user_route.py
backend/app/core/user/services/: user_service.py
backend/app/core/versions/: v1.py
backend/app/utils/: mailer.py  my_jwt.py  regex.py  template.py  utils.py
backend/app/utils/logger/: log.py
backend/app/utils/types_utils/: response_types.py
backend/database/: database.py
backend/utils/: email_utils.py
front/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/: Dockerfile.txt  index.html  package-lock.json  (+3 more)
(+42 files in other folders)
